add field to compute worst side for each contingency + subjectid limit violations
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier.pro@gmail.com>